# libinput-gestures

./: 53-example-touchpad-udev.rules  Makefile  README.md  libinput-gestures  libinput-gestures-setup  libinput-gestures.c  libinput-gestures.conf  libinput-gestures.py  pyproject.toml
