[project]
name = "libinput-gestures"
version = "2.80"
requires-python = ">=3.10"
dependencies = ["evdev"]

[dependency-groups]
dev = ["ruff", "ty"]

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true
#ignore_missing_imports = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

# vim:se sw=2:
